...
        self.locationBtn.setImage(self.imageNotLocate, for: .normal)
        self.view.addSubview(self.locationBtn)
    }
    
    func initSearchTypeView() {
        
        self.searchTypes = ["住宅", "学校", "楼宇", "商场"]
        self.currentType = self.searchTypes.first!
        self.searchTypeSegment = UISegmentedControl(items: self.searchTypes)
        self.searchTypeSegment.frame = CGRect(x: CGFloat(10), y: CGFloat(self.mapView.bounds.height - 50), width: CGFloat(self.mapView.bounds.width - 80), height: CGFloat(32))
        self.searchTypeSegment.layer.cornerRadius = 3
        self.searchTypeSegment.backgroundColor = UIColor.white
        self.searchTypeSegment.autoresizingMask = .flexibleTopMargin
...
